--- a/notebooks/trtssplit.ipynb
+++ b/notebooks/trtssplit.ipynb
@@ -115,6 +115,75 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# НУ ТУТ ВАЩЕЕЕ такое сделаю, вау"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Файлы успешно перемещены!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "# Пути к вашей директории\n",
+    "base_dir = '/home/andrew/works/shpad_add/Detection-of-welding-seams/dataset_copy_56'  # укажите путь к вашей директории\n",
+    "train_images_dir = os.path.join(base_dir, 'train', 'images')\n",
+    "train_labels_dir = os.path.join(base_dir, 'train', 'labels')\n",
+    "test_images_dir = os.path.join(base_dir, 'test', 'images')\n",
+    "test_labels_dir = os.path.join(base_dir, 'test', 'labels')\n",
+    "\n",
+    "# Создаем необходимые папки\n",
+    "os.makedirs(train_images_dir, exist_ok=True)\n",
+    "os.makedirs(train_labels_dir, exist_ok=True)\n",
+    "os.makedirs(test_images_dir, exist_ok=True)\n",
+    "os.makedirs(test_labels_dir, exist_ok=True)\n",
+    "\n",
+    "# Функция для перемещения файлов\n",
+    "def move_files(file_list, target_images_dir, target_labels_dir):\n",
+    "    for file in file_list:\n",
+    "        # Определяем, это изображение или лейбл\n",
+    "        if file.endswith('.jpg'):\n",
+    "            shutil.move(os.path.join(base_dir, file), os.path.join(target_images_dir, file))\n",
+    "        elif file.endswith('.txt'):\n",
+    "            shutil.move(os.path.join(base_dir, file), os.path.join(target_labels_dir, file))\n",
+    "\n",
+    "# Список всех файлов\n",
+    "all_files = os.listdir(base_dir)\n",
+    "\n",
+    "# Фильтруем тестовые файлы\n",
+    "test_files = [file for file in all_files if file[0] in ['5', '6']]\n",
+    "\n",
+    "# Определяем тренировочные файлы\n",
+    "train_files = [file for file in all_files if file not in test_files]\n",
+    "\n",
+    "# Перемещаем файлы\n",
+    "move_files(train_files, train_images_dir, train_labels_dir)\n",
+    "move_files(test_files, test_images_dir, test_labels_dir)\n",
+    "\n",
+    "print(\"Файлы успешно перемещены!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
